--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,9 +18,8 @@ jobs:
 
       - name: Install dependencies
         run: npm ci
-        
-      - name: Build
-        run: npm run build -- --base-href /truchet-generator/
+          - name: Build
+        run: npm run build -- --base-href /truchet-pattern-generator/
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
