--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -13,18 +13,16 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
-
       - name: Install dependencies
         run: npm ci
-
       - name: Build
-        run: npm run build -- --base-href /truchet-pattern-generator/
-
+        run: |
+          npm run build -- --base-href /truchet-pattern-generator
+          cp dist/my-angular-app/browser/index.html dist/my-angular-app/browser/404.html
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
