--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,9 +20,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
       - name: Build
-        run: |
-          npm run build -- --base-href /truchet-pattern-generator
-          cp dist/my-angular-app/browser/index.html dist/my-angular-app/browser/404.html
+        run: npm run build --base-href /truchet-pattern-generator/
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
         with:
