--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,25 +1,53 @@
 name: Deploy to GitHub Pages
+
 on:
   push:
     branches:
-      - master
+      - main
+
 permissions:
   contents: write
+  pages: write
+  id-token: write
+
 jobs:
-  deploy:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      
       - name: Setup Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 18
+          
       - name: Install dependencies
         run: npm ci
+        
       - name: Build
-        run: npm run build -- --base-href /truchet-pattern-generator/
-      - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@v4
+        run: npm run build -- --base-href ./
+        
+      - name: Copy index.html to 404.html
+        run: cp dist/my-angular-app/browser/index.html dist/my-angular-app/browser/404.html
+        
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v3
         with:
-          branch: gh-pages
-          folder: dist/my-angular-app/browser
+          path: dist/my-angular-app/browser
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+    
+    permissions:
+      pages: write
+      id-token: write
+      
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+      
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@v4
