--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,8 +25,11 @@ jobs:
         run: npm ci
         
       - name: Build
-        run: npm run build -- --base-href ./
+        run: npm run build -- --base-href /truchet-pattern-generator/
         
+      - name: Copy index.html to 404.html
+        run: cp dist/my-angular-app/browser/index.html dist/my-angular-app/browser/404.html
+
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
